fixed layout bugs and query on index page

--- a/src/main/resources/META-INF/resources/scss/base/_headline.scss
+++ b/src/main/resources/META-INF/resources/scss/base/_headline.scss
@@ -8,3 +8,7 @@ $bg-color-headline: #1d60bd;
     color: black;
   }
 }
+
+h3, .h3 {
+  font-size: 1.4rem;
+}
