--- a/src/main/resources/META-INF/resources/scss/base/_maincontent.scss
+++ b/src/main/resources/META-INF/resources/scss/base/_maincontent.scss
@@ -123,3 +123,8 @@ $form-color: #251e52;
   color: #333939;
   background-color: #e7e4db;
 }
+
+.card-footer .btn-outline-primary {
+  color: white;
+  border-color: white;
+}
